<resources>
    <string name="app_name">DEPC-ICE</string>
    <string name="lbl_procesando">Espere por favor...</string>
    <string name="lbl_reintentar">Reintentar</string>
    <string name="lbl_frase">SOFTWARE DE ALTO NIVEL</string>
    <string name="err_msg_name">Ingrese un usuario</string>
    <string name="err_msg_password">Ingrese su contraseña</string>
    <string name="lbl_active_gps">Por favor active su GPS...</string>
    <string name="lbl_si">SÍ</string>
    <string name="lbl_no">NO</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_error_gps">Es necesario que permitas tu localización</string>
    <string name="mon">LUN</string>
    <string name="tue">MAR</string>
    <string name="wed">MIÉ</string>
    <string name="thu">JUE</string>
    <string name="fri">VIE</string>
    <string name="sat">SAB</string>
    <string name="sun">DOM</string>
    <string name="last_date">30</string>
    <string name="lbl_seleccion">SELECCIONE</string>
    <string name="current_date">June, 2019</string>
    <string name="add_event">EVENTO</string>
    <string name="lbl_cuota">#</string>
    <string name="lbl_fec_i">Número</string>
    <string name="lbl_fec_v">Fecha\nVenc.</string>
    <string name="lbl_abono">Valor\nAbono</string>
    <string name="lbl_vencido">Valor\nVenc.</string>
    <string name="lbl_valor_total">VALOR\nTOTAL:</string>


    <string name="vw_confirm">Hecho</string>
    <string name="vw_no_video_play_app">¡No existe ninguna aplicación para reproducir videos!</string>
    <string name="vw_record_audio">Grabar audio</string>
    <string name="vw_rationale_storage">Necesita permiso de almacenamiento de lectura para seleccionar archivos</string>
    <string name="vw_up_to_max">Ya está al máximo</string>
    <string name="vw_no_photo_app">¡No hay aplicación de fotos en este teléfono!</string>
    <string name="vw_no_audio_play_app">¡No existe ninguna aplicación para reproducir audio!</string>
    <string name="vw_no_video_app">¡No hay aplicación de video en este teléfono!</string>
    <string name="vw_no_audio_app">¡No hay aplicación de audio en este teléfono!</string>
    <string name="vw_all">Todas</string>

    <string name="leku_title_activity_location_picker">Seleccione su ubicación</string>
    <string name="leku_load_location_error">Algo salió mal. Inténtalo de nuevo.</string>
    <string name="leku_no_search_results">no hay resultados para su búsqueda</string>
    <string name="leku_unknown_location">ubicación desconocida</string>
    <string name="leku_voice_search_promp">Búsqueda por voz…</string>
    <string name="leku_voice_search_extra_language">en-EN</string>
    <string name="leku_toolbar_action_voice_title">Voz</string>
    <string name="leku_search_hint">Buscar</string>
    <string name="leku_no_geocoder_available">v</string>
    <string name="leku_network_resource">red</string>
    <string name="leku_longitude">Longitud</string>
    <string name="leku_latitude">Latitud</string>
    <string name="leku_coordinates">Coordenadas</string>
    <string name="leku_use_this_location">Usar esta ubicación</string>
    <string name="leku_accessibility_remove_current_location">Eliminar ubicación actual</string>

    <string name="YOUR_API_KEY">AIzaSyA8QqXcpVEhx-wh59MuEFh4a4TE7QUWCAI</string>


</resources>