<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fadingEdgeLength="0dp"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:background="@color/color_fondo"
    android:id="@+id/scroll">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/impresora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Impresora: "
            android:textColor="@color/White"
            android:background="@color/Red"
            android:padding="5dp"
            android:textSize="12sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="#F0F0F0"
            android:elevation="4dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="TOTALES"
                android:textStyle="bold"
                android:textColor="@color/White" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="VENCIDO: "
                        android:textColor="@color/Black" />

                    <TextView
                        android:id="@+id/edt_vencido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="$ 0.00" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">


                    <TextView
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="POR VENCER:"
                        android:textColor="@color/Black" />

                    <TextView
                        android:id="@+id/edt_por_vencer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="$ 0.00" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">


                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="TOTAL:     "
                    android:textColor="@color/Black" />

                <TextView
                    android:id="@+id/edt_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="$ 0.00" />

            </LinearLayout>

            <TextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="DETALLES"
                android:textColor="@color/White" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"

                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">


                    <TextView
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="FAC:    "
                        android:textColor="@color/Black" />

                    <TextView
                        android:id="@+id/fac"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="$ 0.00" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:orientation="horizontal">


                    <TextView
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="N/V: "
                        android:textColor="@color/Black" />

                    <TextView
                        android:id="@+id/nv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="$ 0.00" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">


                    <TextView
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="LET:    "
                        android:textColor="@color/Black" />

                    <TextView
                        android:id="@+id/let"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="$ 0.00" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">


                    <TextView
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="N/D:    "
                        android:textColor="@color/Black" />

                    <TextView
                        android:id="@+id/nd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="$ 0.00" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">


                    <TextView
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="LET:    "
                        android:textColor="@color/Black" />

                    <TextView
                        android:id="@+id/pag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="$ 0.00" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancela"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:text="COBRAR"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/White"
                android:textSize="13dp"
                android:background="@color/RoyalBlue"
                android:elevation="4dp"/>

            <Button
                android:id="@+id/cobro_rapido"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:text="Pago rápido efectivo"
                android:layout_marginRight="10dp"
                android:textColor="@color/White"
                android:background="@color/RoyalBlue"
                android:textSize="13dp"
                android:elevation="4dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:elevation="4dp"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/LightGrey">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textStyle="bold"
                android:text="VALOR TOTAL: $ "/>

            <TextView
                android:id="@+id/valor_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginRight="10dp"
                android:text="0.00"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/LightGrey"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="13dp"
                android:text="@string/lbl_cuota"
                android:textColor="@color/Black"
                android:textSize="11sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/lbl_fec_i"
                android:textColor="@color/Black"
                android:textSize="11sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/lbl_fec_v"
                android:textColor="@color/Black"
                android:textSize="11sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/lbl_vencido"
                android:textColor="@color/Black"
                android:textSize="11sp" />


            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:visibility="invisible" />

        </LinearLayout>

        <com.smartapp.depc_ice.Utils.NonScrollListView
            android:id="@+id/lista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="0dp"
            android:layout_marginBottom="10dp"
            android:divider="@color/transparent">

        </com.smartapp.depc_ice.Utils.NonScrollListView>




    </LinearLayout>

</ScrollView>